[package]
name = "telegraph-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ammonia = "3.3"

[dev-dependencies]
tempfile = "3.0"
