[package]
name = "nonograph"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
ammonia = "3.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"
serial_test = "3.0"
